--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <dependency>
+        <groupId>org.jdom</groupId>
+        <artifactId>jdom</artifactId>
+        <version>2.0.2</version>
+    </dependency>
+
     <build>
         <plugins>
             <plugin>
